# project-gonedark

./: .env.development  .gitignore  .gitleaks.toml  .worktreeinclude  CLAUDE.md  Cargo.toml  README.md  compose.yaml  deny.toml  package.json  rust-toolchain.toml
.claude/: README.md  settings.json
.claude/agents/: code-reviewer.md  design-doc-keeper.md  determinism-auditor.md  test-gap-checker.md
.claude/commands/: audit-determinism.md  bug-hunt.md  check-docs.md  check.md  decision.md  fix-ci.md  safe-edit.md
.claude/hooks/: git-scope-guard.py  git-scope-guard.test.py  sim-determinism-guard.sh  unmerged-worktree-check.sh
.github/: dependabot.yml
.github/workflows/: audit.yml  build.yml  determinism.yml  gitleaks.yml  terraform.yml  test.yml
android/: README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
android/app/: build.gradle.kts
android/gradle/wrapper/: gradle-wrapper.properties
app/: Cargo.toml
app/src/: main.rs  shell.rs
assets/app-icon/: manifest.json
assets/fonts/: hud_atlas.gray  manifest.json
assets/icons/: icons_atlas.rgba  manifest.json
assets/maps/: manifest.json  pointe-du-hoc.covergrid  pointe-du-hoc.features.json  pointe-du-hoc.height.f32  pointe-du-hoc.rs.inc
assets/models/: .gitkeep  barricade.glb  barricade.lod1.glb  barricade.lod2.mesh  camp_hq.glb  camp_hq.lod1.glb  camp_hq.lod2.glb  manifest.json  rock.lod1.glb  rock.lod2.glb  rock.lod2.mesh  rock.mesh  tank.glb  tank.lod1.glb  tank.lod1.mesh  tank.lod2.glb  tank.lod2.mesh  tank.mesh  tank_turret.glb  tank_turret.lod1.glb  tank_turret.lod1.mesh  tracer.glb  tracer.lod1.glb  tracer.lod1.mesh  tracer.lod2.glb  tracer.lod2.mesh  tracer.mesh  tree.glb  tree.lod2.glb  tree.lod2.mesh  tree.mesh  trooper.glb  trooper.lod1.mesh  trooper.lod2.glb  turret.glb  turret.lod2.mesh  weapon_rifle.lod2.glb
assets/models/fx/: tracer.glb  tracer.lod1.glb  tracer.lod1.mesh  tracer.lod2.glb  tracer.lod2.mesh  tracer.mesh
assets/models/props/: crate.glb  crate.lod1.glb  crate.lod1.mesh  crate.lod2.glb  crate.lod2.mesh  crate.mesh  rock.glb  rock.lod1.glb  rock.lod1.mesh  rock.lod2.glb  rock.lod2.mesh  rock.mesh  tree.glb  tree.lod1.glb  (+4 more)
assets/textures/: detail.gray  ground.gray  manifest.json
core/: Cargo.toml
core/src/: alerts.rs  campaign.rs  checksum.rs  combat.rs  commander.rs  components.rs  detection.rs  dispersion.rs  economy.rs  ecs.rs  event.rs  fixed.rs  flow_field.rs  fog.rs  gunsmith.rs  heal.rs  lib.rs  lockstep.rs  mission_tuning.rs  obstacles.rs  orders.rs  persist.rs  projectile.rs  reconnect.rs  resupply.rs  rng.rs  scenario.rs  shell.rs  sim.rs  snapshot.rs  spatial.rs  systems.rs  terrain.rs  territory.rs  tests.rs  trig.rs
core/tests/: wall_spray.rs
docs/: architecture.md  content-pipeline.md  customization.md  decisions.md  embodied-feel-floor.md  factions.md  game-design.md  infrastructure.md  maps.md  open-questions.md  phase-0.5-plan.md  phase-1-plan.md  phase-3-plan.md  phase-4-plan.md  platforms.md  playability-plan.md  positioning-cross-platform.md  positioning-pc.md  positioning.md  pve-campaign-plan.md  pve-campaign.md  roadmap.md  tank-embodiment-plan.md
docs/plans/: combat-rebalance-plan.md  compose-shell-parity.md  content-tooling-plan.md  factions-plan.md  phase-0.5-plan.md  phase-1-plan.md  phase-3-plan.md  phase-4-plan.md  playability-plan.md  pve-campaign-plan.md  tank-embodiment-plan.md  test-harness-plan.md  visual-design-plan.md
docs/positioning/: positioning-cross-platform.md  positioning-pc.md  positioning.md
engine/: Cargo.toml
engine/src/: alert_cues.rs  audio.rs  build_ui.rs  command_gesture.rs  command_touch.rs  command_ui.rs  fire.rs  hud_layout.rs  jump.rs  keybind.rs  lib.rs  loadout_ui.rs  locomote.rs  map_format.rs  mission_format.rs  mission_registry.rs  net_tuning.rs  objectives.rs  onboarding.rs  panel_summary.rs  recoil.rs  scope.rs  selection.rs  session_shell.rs  shell_modes.rs  touch_controls.rs  train_ui.rs  tuning.rs  upgrade_ui.rs
engine/tests/: content_lint.rs
infra/: README.md  main.tf  providers.tf  secrets.tf  variables.tf  versions.tf
infra-secrets/: .sops.yaml  README.md  prod.example.yaml
maps/: crossroads.map.ron  seize_outpost.map.ron
missions/: seize.mission.ron
net-sim-runner/: Cargo.toml
net-sim-runner/src/: main.rs
pal/: Cargo.toml
pal-android/: Cargo.toml  build.rs
pal-android/src/: android_backend.rs  launch.rs  lib.rs  thermal.rs
pal-desktop/: Cargo.toml
pal-desktop/src/: audio.rs  lib.rs  pingpong.rs  transport.rs
pal/src/: lib.rs  mix.rs
prototypes/phase0-controls/: .gitignore  Main.gd  Main.gd.uid  README.md  deploy.sh  export_presets.cfg  project.godot
prototypes/phase0.5-netfeel/: .gitignore  Main.gd  Main.gd.uid  README.md  deploy.sh  export_presets.cfg  project.godot
render/: Cargo.toml
render/src/: anim.rs  build_menu.rs  command_bar.rs  command_panel.rs  debug.rs  debug.wgsl  detection.rs  detection.wgsl  fog.rs  hud.rs  hud.wgsl  icon.rs  icon.wgsl  impact.rs  impact.wgsl  lib.rs  marquee.rs  marquee.wgsl  mesh.rs  mesh.wgsl  objective_hud.rs  overlay.rs  overlay.wgsl  picker.rs  player_hud.rs  present.rs  present.wgsl  prompt.rs  radial.rs  radial.wgsl  readout.rs  scene_target.rs  scope.rs  scope.wgsl  shader.wgsl  skel.rs  tank_hud.rs  tank_hud.wgsl  terrain.rs  terrain.wgsl  (+12 more)
replay-runner/: Cargo.toml
replay-runner/src/: codec.rs  lib.rs  main.rs  scenario.rs
scripts/: android-checksum.sh  android-fps.sh  android-stress.sh  android.sh  help.sh
server/: Cargo.toml
server/migrations/: 0001_telemetry_events.sql
server/src/: consent.rs  http.rs  lib.rs  liveops.rs  main.rs  postgres.rs  telemetry.rs
server/tests/: http_ingest.rs
sim-runner/: Cargo.toml
sim-runner/src/: duel.rs  infantry.rs  main.rs  matchup.rs  metrics.rs
tools/fonts/: gen_hud_font.py
tools/icons/: gen_app_icon.py  gen_icons.py
tools/maps/: README.md  bake.py  generate.py  ingest.py  lint.py  terrain_mesh.py
tools/models/: README.md  gen_models.py  gen_trooper_rig.py
tools/textures/: gen_textures.py
viz-runner/: Cargo.toml
viz-runner/src/: main.rs
(+146 files in other folders)
