[package]
name = "gonedark-app"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

# The host: wires core + pal + render and owns the run loop / sim-render split. Selects a
# concrete PAL backend per target (desktop here; android's entry is `android_main` in
# `pal-android`, built directly by cargo-ndk). `winit`/`wgpu`/`glam` are fine in this crate
# — invariant #2 only keeps GPU/windowing/host-float math out of `core` and the abstract
# `pal` trait crate. `app` builds the view_proj matrix and quantizes pointer taps to Fixed
# AT THE INPUT BOUNDARY (D19), so no float ever crosses into the deterministic sim.
[dependencies]
gonedark-core = { path = "../core" }
gonedark-pal = { path = "../pal" }
gonedark-render = { path = "../render" }
winit = "0.30"
wgpu = "29"
glam = "0.30"

[target.'cfg(not(target_os = "android"))'.dependencies]
gonedark-pal-desktop = { path = "../pal-desktop" }

# Android does NOT share this desktop run loop: its entry point is `android_main` in
# `pal-android`, built directly by cargo-ndk into a `.so`. The shared android run-loop
# wiring is Phase 2; for now `app` stays a desktop binary and this dep is only here so a
# `cargo build --target aarch64-linux-android` of the workspace still resolves the host.
[target.'cfg(target_os = "android")'.dependencies]
gonedark-pal-android = { path = "../pal-android" }
