[package]
name = "gonedark-app"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

# The DESKTOP host: a thin `winit` 0.30 run loop that drives the shared `engine::Game`
# (sim + render + fixed-tick + cameras + input). The platform-agnostic loop lives in
# `engine`; this crate only owns the window, the desktop wgpu surface, and input plumbing.
# `winit`/`wgpu` are fine here — invariant #2 only keeps GPU/windowing out of `core` and the
# abstract `pal` trait crate. (Android does NOT use this binary; its entry is `android_main`
# in `pal-android`, which drives the same `engine::Game`.)
[dependencies]
gonedark-engine = { path = "../engine" }
gonedark-pal = { path = "../pal" }
winit = "0.30"
wgpu = "29"

[target.'cfg(not(target_os = "android"))'.dependencies]
gonedark-pal-desktop = { path = "../pal-desktop" }

# Android does NOT share this desktop run loop: its entry point is `android_main` in
# `pal-android`, built directly by cargo-ndk into a `.so`. The shared android run-loop
# wiring is Phase 2; for now `app` stays a desktop binary and this dep is only here so a
# `cargo build --target aarch64-linux-android` of the workspace still resolves the host.
[target.'cfg(target_os = "android")'.dependencies]
gonedark-pal-android = { path = "../pal-android" }
