[package]
name = "gonedark-app"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

# The DESKTOP host: a thin `winit` 0.30 run loop that drives the shared `engine::Game`
# (sim + render + fixed-tick + cameras + input). The platform-agnostic loop lives in
# `engine`; this crate only owns the window, the desktop wgpu surface, and input plumbing.
# `winit`/`wgpu` are fine here — invariant #2 only keeps GPU/windowing out of `core` and the
# abstract `pal` trait crate. (Android does NOT use this binary; its entry is `android_main`
# in `pal-android`, which drives the same `engine::Game`.)
# Real desktop audio output is opt-in (forwards to pal-desktop's `audio` feature, which pulls
# cpal → links ALSA; needs `alsa-lib-devel`). OFF by default so the standard desktop build needs
# no audio dev headers (invariant #8). Enable with `cargo run -p gonedark-app --features audio`
# (or `pnpm play:audio`).
[features]
audio = ["gonedark-pal-desktop/audio"]

[dependencies]
gonedark-engine = { path = "../engine" }
gonedark-pal = { path = "../pal" }
winit = "0.30"
wgpu = "29"

[target.'cfg(not(target_os = "android"))'.dependencies]
gonedark-pal-desktop = { path = "../pal-desktop" }

# The desktop app shell (D32: out-of-match surfaces are native per-platform; D36 picks egui as the
# desktop toolkit — the call D32 left open). egui renders through the SAME wgpu 29 device + winit 0.30
# window this binary already owns (one wgpu in the dep tree — verified), so the title screen is
# host-side chrome with no second window/event path. Desktop-only (the app bin is never built for
# android — its entry is `android_main`), so these sit under the not-android target alongside
# pal-desktop. The shell holds no game logic; it drives the shared engine the same way the Android
# Compose shell (D35) does (invariant #2).
egui = "0.35"
egui-wgpu = "0.34"
egui-winit = "0.34"

# Android does NOT share this desktop run loop: its entry point is `android_main` in
# `pal-android`, built directly by cargo-ndk into a `.so`. The shared android run-loop
# wiring is Phase 2; for now `app` stays a desktop binary and this dep is only here so a
# `cargo build --target aarch64-linux-android` of the workspace still resolves the host.
[target.'cfg(target_os = "android")'.dependencies]
gonedark-pal-android = { path = "../pal-android" }
