[package]
name = "gonedark-render"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

# The renderer. Consumes a read-only core snapshot (invariant #4) and is the float
# boundary — Q16.16 → f32 happens HERE, never in core. The wgpu device/pipeline is wired
# in Phase 1 build-order step 4. `wgpu` (→ Vulkan/D3D12/Metal per device) and `bytemuck`
# (for GPU-uploadable Pod instance/uniform structs) land here. NO `winit`/`glam`/`pollster`
# — those live in the wiring layer (`app`) and the desktop backend (D19); this crate talks
# only to the abstract `wgpu` API, never to a specific GPU API or to a windowing crate.
[dependencies]
gonedark-core = { path = "../core" }
# The PAL trait crate — pulled ONLY for the platform-signal *types* (`ThermalState`) the render
# quality-tuning policy in `tiers` reasons about (invariant #2: render may read a PAL signal; the
# PAL stays a trait/data crate with no GPU/windowing deps). No concrete backend is referenced here.
gonedark-pal = { path = "../pal" }
wgpu = "29"
bytemuck = { version = "1", features = ["derive"] }

[dev-dependencies]
# Offline WGSL validation in tests: `Renderer::new` needs a real GPU (no display in CI), so
# the shader can't be exercised there. `naga` (the same shader compiler wgpu uses internally,
# pinned to wgpu 29's version) parses + validates `shader.wgsl` so a shader regression fails
# `cargo test`, not silently at pipeline creation on a user's machine.
naga = { version = "29", features = ["wgsl-in"] }
