[package]
name = "gonedark-server"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

# Backend services host (placeholder, docs/infrastructure.md). Phase 1's exit criterion is
# single-player on-device, so there is no networked play yet — this is just the
# clone-and-run health seam. The matchmaker/accounts/store split happens when there's real
# logic (Phase 2/3). axum + tokio versions are filled in by `cargo add`.
[dependencies]
axum = "0.8.9"
tokio = { version = "1.52.3", features = ["rt-multi-thread", "net", "macros"] }
