[package]
name = "gonedark-server"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

# Library seam (consent/telemetry/liveops logic) + the binary host. The logic lives in the
# lib so it is unit-testable and the doctests can reach `gonedark_server::consent::…`.
[lib]
name = "gonedark_server"
path = "src/lib.rs"

[[bin]]
name = "gonedark-server"
path = "src/main.rs"

# Backend services host (docs/infrastructure.md). Started as the clone-and-run health
# seam; Phase 4 WS-D adds the telemetry + consent-gate + live-ops scaffolding (server-side
# only — NOT in the deterministic sim path, so no `core`/`engine` deps leak in here).
# serde/serde_json are already in the workspace tree (axum pulls them); no new heavy deps.
[dependencies]
axum = { version = "0.8.9", features = ["json"] }
tokio = { version = "1.52.3", features = ["rt-multi-thread", "net", "macros", "sync"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"

[dev-dependencies]
tokio = { version = "1.52.3", features = ["rt-multi-thread", "net", "macros", "sync", "test-util"] }
# `tower::ServiceExt::oneshot` drives the router in the HTTP integration test (no live socket).
tower = { version = "0.5.3", features = ["util"] }
