[package]
name = "gonedark-server"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

# Library seam (consent/telemetry/liveops logic) + the binary host. The logic lives in the
# lib so it is unit-testable and the doctests can reach `gonedark_server::consent::…`.
[lib]
name = "gonedark_server"
path = "src/lib.rs"

[[bin]]
name = "gonedark-server"
path = "src/main.rs"

# Backend services host (docs/infrastructure.md). Started as the clone-and-run health
# seam; Phase 4 WS-D adds the telemetry + consent-gate + live-ops scaffolding (server-side
# only — NOT in the deterministic sim path, so no `core`/`engine` deps leak in here).
# serde/serde_json are already in the workspace tree (axum pulls them); no new heavy deps.
[dependencies]
axum = { version = "0.8.9", features = ["json"] }
tokio = { version = "1.52.3", features = ["rt-multi-thread", "net", "macros", "sync"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"

# Optional Postgres-backed TelemetrySink (Phase 4 WS-D deferred item). Behind the `postgres`
# feature so the DEFAULT build/test/CI never compiles sqlx and needs no database — clone-and-run
# stays green with zero setup (invariant #8 / CI floor). Inserts use sqlx's RUNTIME query API
# (`sqlx::query(...)`, NOT the compile-time `query!` macros), so building needs no live DB and no
# checked-in `.sqlx` cache. The `macros` feature is on only for `sqlx::migrate!`, which embeds the
# SQL files under `migrations/` at compile time (file read, not a DB query). Runtime is Tokio
# (already in use); rustls-ring avoids a system OpenSSL build dep. No credentials here —
# connection comes from `DATABASE_URL` (non-secret local default in `.env.development`).
sqlx = { version = "0.9.0", default-features = false, features = [
    "runtime-tokio",
    "tls-rustls-ring",
    "postgres",
    "json",
    "migrate",
    "macros",
], optional = true }

[features]
# Enable the Postgres sink: `cargo build/test -p gonedark-server --features postgres`.
postgres = ["dep:sqlx"]

[dev-dependencies]
tokio = { version = "1.52.3", features = ["rt-multi-thread", "net", "macros", "sync", "test-util"] }
# `tower::ServiceExt::oneshot` drives the router in the HTTP integration test (no live socket).
tower = { version = "0.5.3", features = ["util"] }
