[package]
name = "gonedark-viz-runner"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

# Headless OFFSCREEN render driver — the visual counterpart to `sim-runner`. It builds the real
# `engine::Game` against a surfaceless wgpu device, drives scripted input (embody, combat), renders
# to a texture, reads the pixels back, writes PNGs, and asserts pixel-level invariants (the command
# view draws units; embodiment goes dark; the alert HUD draws markers). Needs a GPU adapter, so it
# is a LOCAL tool (run via `pnpm viz`), NOT part of the no-GPU CI matrix.
[dependencies]
gonedark-core = { path = "../core" }
gonedark-engine = { path = "../engine" }
gonedark-pal = { path = "../pal" }
# The title backdrop is a standalone render-crate component (no `engine::Game`), so the viz
# harness drives it directly to screenshot it (the other scenes go through `Game`).
gonedark-render = { path = "../render" }
# PC-3 rendered spectator scene: reuse the headless replay record/order logic (Replay /
# MultiReplay + the merged, ascending-peer-id command stream) rather than reimplementing it, and
# cross-check the rendered playback's per-tick checksums against the replay's proven oracle.
gonedark-replay-runner = { path = "../replay-runner" }
wgpu = "29"
pollster = "0.4"
png = "0.18"
